tests/modules/tincludeas.nim
discard """
  errormsg: "Cannot use 'as' in 'include'."
  line: 6
"""

include foobar as foo
